@@ -72,7 +72,7 @@ double dnbinom_mu(double x, double size, double mu, int give_log)
     if (x < 0 || !R_FINITE(x)) return R_D__0;
 
     /* limiting case as size approaches zero is point mass at zero,
-     * even if mu is kept constant. limit distribution does not 
+     * even if mu is kept constant. limit distribution does not
      * have mean mu, though.
      */
     if (x == 0 && size==0) return R_D__1;
@@ -82,7 +82,8 @@ double dnbinom_mu(double x, double size, double mu, int give_log)
 	return R_D_exp(size * (size < mu ? log(size/(size+mu)) : log1p(- mu/(size+mu))));
     if(x < 1e-10 * size) { /* don't use dbinom_raw() but MM's formula: */
 	/* FIXME --- 1e-8 shows problem; rather use algdiv() from ./toms708.c */
-	return R_D_exp(x * log(size*mu / (size+mu)) - mu - lgamma(x+1) +
+	p = (size < mu ? log(size/(1 + size/mu)) : log(mu / (1 + mu/size)));
+	return R_D_exp(x * p - mu - lgamma(x+1) +
 		       log1p(x*(x-1)/(2*size)));
     }
     /* else: no unnecessary cancellation inside dbinom_raw, when
